demo tuan 7
